# knowledge-collection-service

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  config.py  domains.json  kb_init.ipynb  main.py  pipeline_from_json.py  pyproject.toml  query-pipeline.py  reddit-pipeline.py  retrieve_recommendations.py  run_api.bat  run_api.sh  system_explanation.md  test.ipynb  v2_pipeline_test.ipynb
api/: main.py
lib/: db.py
rag/: adaptive.py  pipeline.py  sql.py  types.py
reddit_extractor/: .gitignore  README.md  config.py  domains.json  env.example  pyproject.toml
services/: classify.py
