[project]
name = "knowledge-collection-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pmaw>=3.0.0",
    "readability-lxml>=0.8.4.1",
]
